--- a/api-spec/definitions/STAC-standalone.yaml
+++ b/api-spec/definitions/STAC-standalone.yaml
@@ -21,7 +21,20 @@ servers:
   - url: 'http://www.cool-sat.com'
     description: Production server
 paths:
-  /search/stac:
+  /stac:
+    get:
+      summary: >-
+        Return a catalog definition json
+      tags:
+        - STAC
+      responses:
+        '200':
+          description: A catalog json definition. Used as an entry point for a crawler.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/catalogDefinition'
+  /stac/search:
     get:
       summary: >-
         retrieve items matching filters. Intended as a shorthand API for simple
@@ -33,7 +46,6 @@ paths:
         - $ref: '#/components/parameters/bbox'
         - $ref: '#/components/parameters/time'
         - $ref: '#/components/parameters/limit'
-        - $ref: '#/components/parameters/query'
       responses:
         '200':
           description: A feature collection.
@@ -190,13 +202,6 @@ components:
       required: true
       schema:
         type: string
-    query:
-      name: query
-      in: query
-      description: query for properties in items. Use the JSON for of the queryFilter used in POST.
-      required: false
-      schema:
-        type: string
   schemas:
     exception:
       type: object
@@ -217,12 +222,6 @@ components:
         rel:
           type: string
           example: prev
-        type:
-          type: string
-          example: application/geo+json
-        hreflang:
-          type: string
-          example: en
     searchBody:
       description: The search criteria
       type: object
@@ -230,7 +229,6 @@ components:
         - $ref: '#/components/schemas/bboxFilter'
         - $ref: '#/components/schemas/timeFilter'
         - $ref: '#/components/schemas/intersectsFilter'
-        - $ref: '#/components/schemas/queryFilter'
         - type: object
           properties:
             limit:
@@ -293,62 +291,6 @@ components:
       properties:
         intersects:
           $ref: '#/components/schemas/polygon'
-    queryFilter:
-      type: object
-      description: Allows users to query properties for specific values
-      properties:
-        query:
-          $ref: '#/components/schemas/query'
-    query:
-      type: object
-      description: Define which properties to query and the operatations to apply
-      additionalProperties:
-        $ref: '#/components/schemas/queryProp'
-      example:
-        eo:cloud_cover:
-          lt: 50
-        provider: Planet
-        published:
-          date: '2018-02-12T00:00:00Z/2018-03-18T12:31:12Z'
-        pl:item_type:
-          startsWith: PSScene
-    queryProp:
-      description: Apply query operations to a specific property
-      anyOf:
-        - type: object
-          description: if the object doesn't contain any of the operators, it is equivalent to using the equals operator
-        - type: object
-          description: Match using an operator
-          properties:
-            eq:
-              type: object
-              description: Find items with a property that is equal to the specified value
-            neq:
-              type: object
-              description: Find items that *don't* contain the specified value
-            gt: 
-              type: number
-              description: Find items with a property value greater than the specified value
-            lt:
-              type: number
-              description: Find items with a property value less than the specified value
-            gte:
-              type: number
-              description: Find items with a property value greater than or equal the specified value
-            lte:
-              type: number
-              description: Find items with a property value greater than or equal the specified value
-            startsWith:
-              type: string
-              description: Find items with a property that begins with the specified string
-            endsWith:
-              type: string
-              description: Find items with a property that ends with the specified string
-            contains:
-              type: string
-              description: Find items with a property that contains with the specified string
-            time:
-              $ref: '#/components/schemas/time'
     polygon:
       type: object
       properties:
@@ -420,6 +362,51 @@ components:
 
         extent or all relevant temporal properties.
       example: '2018-02-12T00:00:00Z/2018-03-18T12:31:12Z'
+    catalogDefinition:
+      type: object
+      properties:
+        name:
+          type: string
+          example: NAIP
+        description:
+          type: string
+          example: Catalog of NAIP Imagery
+        license: 
+          type: string
+          example: PDDL-1.0
+        links: 
+          type: array
+          items:
+            type: object
+            properties:
+              rel:
+                type: string
+                example: child
+              href:
+                type: string
+        contact:
+          type: object
+          properties:
+            name:
+              type: string
+            email:
+              type: string
+            phone:
+              type: string
+            url:
+              type: string
+        formats:
+          type: array
+          items:
+            type: string
+        keywords:
+          type: array
+          items:
+            type: string
+        homepage:
+          type: string
+        provider:
+          type: object
     itemCollection:
       type: object
       required:
