additionalProperties for the provider

--- a/api-spec/STAC-standalone.yaml
+++ b/api-spec/STAC-standalone.yaml
@@ -413,6 +413,7 @@ components:
           type: string
         provider:
           type: object
+          additionalProperties: true
     itemCollection:
       type: object
       required:
