--- a/api-spec/STAC-query.yaml
+++ b/api-spec/STAC-query.yaml
@@ -45,6 +45,9 @@ paths:
         - $ref: '#/components/parameters/bbox'
         - $ref: '#/components/parameters/time'
         - $ref: '#/components/parameters/limit'
+        - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/sort'
+        - $ref: '#/components/parameters/fields'
       responses:
         '200':
           description: A feature collection.
@@ -83,165 +86,6 @@ paths:
             application/geo+json:
               schema:
                 $ref: '#/components/schemas/itemCollection'
-            text/html:
-              schema:
-                type: string
-        default:
-          description: An error occured.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/exception'
-            text/html:
-              schema:
-                type: string
-  /:
-    get:
-      summary: landing page of this API
-      description: >-
-        The landing page provides links to the API definition, the Conformance
-        statements and the metadata about the feature data in this dataset.
-      operationId: getLandingPage
-      tags:
-        - Capabilities
-      responses:
-        '200':
-          description: links to the API capabilities
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/root'
-            text/html:
-              schema:
-                type: string
-  /conformance:
-    get:
-      summary: information about standards that this API conforms to
-      description: >-
-        list all requirements classes specified in a standard (e.g., WFS 3.0
-        Part 1: Core) that the server conforms to
-      operationId: getRequirementsClasses
-      tags:
-        - Capabilities
-      responses:
-        '200':
-          description: the URIs of all requirements classes supported by the server
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/req-classes'
-        default:
-          description: An error occured.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/exception'
-  /collections:
-    get:
-      summary: describe the feature collections in the dataset
-      operationId: describeCollections
-      tags:
-        - Capabilities
-      responses:
-        '200':
-          description: Metdata about the feature collections shared by this API.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/content'
-            text/html:
-              schema:
-                type: string
-        default:
-          description: An error occured.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/exception'
-            text/html:
-              schema:
-                type: string
-  '/collections/{collectionId}':
-    get:
-      summary: 'describe the {collectionId} feature collection'
-      operationId: describeCollection
-      tags:
-        - Capabilities
-      parameters:
-        - $ref: '#/components/parameters/collectionId'
-      responses:
-        '200':
-          description: 'Metadata about the {collectionId} collection shared by this API.'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/collectionInfo'
-            text/html:
-              schema:
-                type: string
-        default:
-          description: An error occured.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/exception'
-            text/html:
-              schema:
-                type: string
-  '/collections/{collectionId}/items':
-    get:
-      summary: 'retrieve features of feature collection {collectionId}'
-      description: >-
-        Every feature in a dataset belongs to a collection. A dataset may
-        consist of multiple feature collections. A feature collection is often a
-        collection of features of a similar type, based on a common schema.\
-
-        Use content negotiation to request HTML or GeoJSON.
-      operationId: getFeatures
-      tags:
-        - Features
-      parameters:
-        - $ref: '#/components/parameters/collectionId'
-        - $ref: '#/components/parameters/limit'
-        - $ref: '#/components/parameters/bbox'
-        - $ref: '#/components/parameters/time'
-      responses:
-        '200':
-          description: >-
-            Information about the feature collection plus the first features
-            matching the selection parameters.
-          content:
-            application/geo+json:
-              schema:
-                $ref: '#/components/schemas/featureCollectionGeoJSON'
-            text/html:
-              schema:
-                type: string
-        default:
-          description: An error occured.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/exception'
-            text/html:
-              schema:
-                type: string
-  '/collections/{collectionId}/items/{featureId}':
-    get:
-      summary: retrieve a feature; use content negotiation to request HTML or GeoJSON
-      operationId: getFeature
-      tags:
-        - Features
-      parameters:
-        - $ref: '#/components/parameters/collectionId'
-        - $ref: '#/components/parameters/featureId'
-      responses:
-        '200':
-          description: A feature.
-          content:
-            application/geo+json:
-              schema:
-                $ref: '#/components/schemas/featureGeoJSON'
             text/html:
               schema:
                 type: string
@@ -360,6 +204,31 @@ components:
       required: true
       schema:
         type: string
+    query:
+      name: query
+      in: query
+      description: >-
+        query for properties in items. Use the JSON form of the queryFilter used
+        in POST.
+      required: false
+      schema:
+        type: string
+    sort:
+      name: sort
+      in: query
+      description: Allows sorting results by the specified properties
+      required: false
+      schema:
+        $ref: '#/components/schemas/sort'
+    fields:
+      name: fields
+      in: query
+      description: Determines the shape of the features in the response
+      required: false
+      schema:
+        $ref: '#/components/schemas/fields'
+      style: form
+      explode: false
   schemas:
     exception:
       type: object
@@ -392,6 +261,9 @@ components:
             limit:
               type: number
               example: 10
+        - $ref: '#/components/schemas/queryFilter'
+        - $ref: '#/components/schemas/sortFilter'
+        - $ref: '#/components/schemas/fieldsFilter'
     bbox:
       description: |
         Only features that have a geometry that intersects the bounding box are
@@ -696,214 +568,127 @@ components:
             client should utilize the `nextPageToken`.
           example: >-
             http://api.cool-sat.com/query/gasd312fsaeg/ANsXtp9mrqN0yrKWhf-y2PUpHRLQb1GT-mtxNcXou8TwkXhi1Jbk
-    root:
+    queryFilter:
       type: object
-      required:
-        - links
+      description: Allows users to query properties for specific values
       properties:
-        links:
-          type: array
-          items:
-            $ref: '#/components/schemas/link'
-          example:
-            - href: 'http://data.example.org/'
-              rel: self
-              type: application/json
-              title: this document
-            - href: 'http://data.example.org/api'
-              rel: service
-              type: application/openapi+json;version=3.0
-              title: the API definition
-            - href: 'http://data.example.org/conformance'
-              rel: conformance
-              type: application/json
-              title: WFS 3.0 conformance classes implemented by this server
-            - href: 'http://data.example.org/collections'
-              rel: data
-              type: application/json
-              title: Metadata about the feature collections
-    req-classes:
+        query:
+          $ref: '#/components/schemas/query'
+    query:
       type: object
-      required:
-        - conformsTo
-      properties:
-        conformsTo:
-          type: array
-          items:
-            type: string
-          example:
-            - 'http://www.opengis.net/spec/wfs-1/3.0/req/core'
-            - 'http://www.opengis.net/spec/wfs-1/3.0/req/oas30'
-            - 'http://www.opengis.net/spec/wfs-1/3.0/req/html'
-            - 'http://www.opengis.net/spec/wfs-1/3.0/req/geojson'
-    content:
+      description: Define which properties to query and the operatations to apply
+      additionalProperties:
+        $ref: '#/components/schemas/queryProp'
+      example:
+        'eo:cloud_cover':
+          lt: 50
+        provider: Planet
+        published:
+          date: '2018-02-12T00:00:00Z/2018-03-18T12:31:12Z'
+        'pl:item_type':
+          startsWith: PSScene
+    queryProp:
+      description: Apply query operations to a specific property
+      anyOf:
+        - description: >-
+            if the object doesn't contain any of the operators, it is equivalent
+            to using the equals operator
+        - type: object
+          description: Match using an operator
+          properties:
+            eq:
+              description: Find items with a property that is equal to the specified value
+            neq:
+              description: Find items that *don't* contain the specified value
+            gt:
+              type: number
+              description: >-
+                Find items with a property value greater than the specified
+                value
+            lt:
+              type: number
+              description: Find items with a property value less than the specified value
+            gte:
+              type: number
+              description: >-
+                Find items with a property value greater than or equal the
+                specified value
+            lte:
+              type: number
+              description: >-
+                Find items with a property value greater than or equal the
+                specified value
+            startsWith:
+              type: string
+              description: Find items with a property that begins with the specified string
+            endsWith:
+              type: string
+              description: Find items with a property that ends with the specified string
+            contains:
+              type: string
+              description: >-
+                Find items with a property that contains with the specified
+                string
+            time:
+              $ref: '#/components/schemas/time'
+    sortFilter:
       type: object
-      required:
-        - links
-        - collections
+      description: Sort the results
       properties:
-        links:
-          type: array
-          items:
-            $ref: '#/components/schemas/link'
-          example:
-            - href: 'http://data.example.org/collections.json'
-              rel: self
-              type: application/json
-              title: this document
-            - href: 'http://data.example.org/collections.html'
-              rel: alternate
-              type: text/html
-              title: this document as HTML
-            - href: 'http://schemas.example.org/1.0/foobar.xsd'
-              rel: describedBy
-              type: application/xml
-              title: XML schema for Acme Corporation data
-        collections:
-          type: array
-          items:
-            $ref: '#/components/schemas/collectionInfo'
-    collectionInfo:
-      type: object
-      required:
-        - name
-        - links
-      properties:
-        name:
-          description: 'identifier of the collection used, for example, in URIs'
-          type: string
-          example: buildings
-        title:
-          description: human readable title of the collection
-          type: string
-          example: Buildings
-        description:
-          description: a description of the features in the collection
-          type: string
-          example: Buildings in the city of Bonn.
-        links:
-          type: array
-          items:
-            $ref: '#/components/schemas/link'
-          example:
-            - href: 'http://data.example.org/collections/buildings/items'
-              rel: item
-              type: application/geo+json
-              title: Buildings
-            - href: 'http://example.org/concepts/building.html'
-              rel: describedBy
-              type: text/html
-              title: Feature catalogue for buildings
-        extent:
-          $ref: '#/components/schemas/extent'
-        crs:
-          description: >-
-            The coordinate reference systems in which geometries may be
-            retrieved. Coordinate reference systems are identified by a URI. The
-            first coordinate reference system is the coordinate reference system
-            that is used by default. This is always
-            "http://www.opengis.net/def/crs/OGC/1.3/CRS84", i.e. WGS84
-            longitude/latitude.
-          type: array
-          items:
-            type: string
-          default:
-            - 'http://www.opengis.net/def/crs/OGC/1.3/CRS84'
-    extent:
-      type: object
-      properties:
-        crs:
-          description: >-
-            Coordinate reference system of the coordinates in the spatial extent
-            (property `spatial`). In the Core, only WGS84 longitude/latitude is
-            supported. Extensions may support additional coordinate reference
-            systems.
-          type: string
-          enum:
-            - 'http://www.opengis.net/def/crs/OGC/1.3/CRS84'
-          default: 'http://www.opengis.net/def/crs/OGC/1.3/CRS84'
-        spatial:
-          description: >-
-            West, north, east, south edges of the spatial extent. The minimum
-            and maximum values apply to the coordinate reference system WGS84
-            longitude/latitude that is supported in the Core. If, for example, a
-            projected coordinate reference system is used, the minimum and
-            maximum values need to be adjusted.
-          type: array
-          minItems: 4
-          maxItems: 6
-          items:
-            type: number
-          example:
-            - -180
-            - -90
-            - 180
-            - 90
-        trs:
-          description: >-
-            Temporal reference system of the coordinates in the temporal extent
-            (property `temporal`). In the Core, only the Gregorian calendar is
-            supported. Extensions may support additional temporal reference
-            systems.
-          type: string
-          enum:
-            - 'http://www.opengis.net/def/uom/ISO-8601/0/Gregorian'
-          default: 'http://www.opengis.net/def/uom/ISO-8601/0/Gregorian'
-        temporal:
-          description: Begin and end times of the temporal extent.
-          type: array
-          minItems: 2
-          maxItems: 2
-          items:
-            type: string
-            format: dateTime
-          example:
-            - '2011-11-11T12:22:11Z'
-            - '2012-11-24T12:32:43Z'
-    featureCollectionGeoJSON:
-      type: object
-      required:
-        - features
-      properties:
-        features:
-          type: array
-          items:
-            $ref: '#/components/schemas/featureGeoJSON'
-    featureGeoJSON:
-      type: object
-      required:
-        - type
-        - geometry
-        - properties
-      properties:
-        type:
-          type: string
-          enum:
-            - Feature
-        geometry:
-          $ref: '#/components/schemas/geometryGeoJSON'
+        sort:
+          $ref: '#/components/schemas/sort'
+    sort:
+      type: array
+      description: |
+        An array of objects containing a property name and sort direction.
+      minItems: 1
+      items:
+        type: object
+        required:
+          - field
         properties:
-          type: object
-          nullable: true
-        id:
-          oneOf:
-            - type: string
-            - type: integer
-    geometryGeoJSON:
+          field:
+            type: string
+          direction:
+            type: string
+            default: asc
+            enum:
+              - asc
+              - desc
+      example:
+        - field: 'eo:cloud_cover'
+        - field: provider
+          direction: desc
+    fieldsFilter:
       type: object
-      required:
-        - type
+      description: Determines the shape of the features in the response
       properties:
-        type:
-          type: string
-          enum:
-            - Point
-            - MultiPoint
-            - LineString
-            - MultiLineString
-            - Polygon
-            - MultiPolygon
-            - GeometryCollection
+        fields:
+          $ref: '#/components/schemas/fields'
+    fields:
+      description: >
+        The geometry member determines whether the geometry is populated or is
+        null. The
+
+        include and exclude members specify an array of property names that are
+        either 
+
+        included or excluded from the result, respectively. If both include and
+        exclude 
+
+        are specified, include takes precedence.
+      type: object
+      properties:
+        geometry:
+          type: boolean
+        include:
+          type: array
+          items:
+            type: string
+        exclude:
+          type: array
+          items:
+            type: string
 tags:
   - name: STAC
     description: Extension to WFS3 Core to support STAC metadata model and search API
