--- a/json-spec/package.json
+++ b/json-spec/package.json
@@ -2,7 +2,7 @@
   "name": "flat_file",
   "version": "1.0.0",
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "dependencies": {
     "ajv-cli": "^2.1.0"
   }
