Fixed inconsistencies in the API spec (fragments vs. generated spec).

--- a/api-spec/STAC-query.yaml
+++ b/api-spec/STAC-query.yaml
@@ -394,6 +394,11 @@ components:
       example: '2018-02-12T00:00:00Z/2018-03-18T12:31:12Z'
     catalogDefinition:
       type: object
+      required:
+        - name
+        - description
+        - links
+      additionalProperties: true
       properties:
         name:
           type: string
@@ -408,6 +413,7 @@ components:
           type: array
           items:
             type: object
+            additionalProperties: true
             properties:
               rel:
                 type: string
@@ -437,6 +443,7 @@ components:
           type: string
         provider:
           type: object
+          additionalProperties: true
     itemCollection:
       type: object
       required:
@@ -470,8 +477,7 @@ components:
         bbox:
           $ref: '#/components/schemas/bbox'
         geometry:
-          type: object
-          description: footprint of the item
+          $ref: 'http://json.schemastore.org/geojson.json#/definitions/geometry'
         type:
           type: string
           description: The GeoJSON type
