--- a/api-spec/WFS3core+STAC.yaml
+++ b/api-spec/WFS3core+STAC.yaml
@@ -522,6 +522,11 @@ components:
       example: '2018-02-12T00:00:00Z/2018-03-18T12:31:12Z'
     catalogDefinition:
       type: object
+      required:
+        - name
+        - description
+        - links
+      additionalProperties: true
       properties:
         name:
           type: string
@@ -536,6 +541,7 @@ components:
           type: array
           items:
             type: object
+            additionalProperties: true
             properties:
               rel:
                 type: string
@@ -565,6 +571,7 @@ components:
           type: string
         provider:
           type: object
+          additionalProperties: true
     itemCollection:
       type: object
       required:
@@ -598,8 +605,7 @@ components:
         bbox:
           $ref: '#/components/schemas/bbox'
         geometry:
-          type: object
-          description: footprint of the item
+          $ref: 'http://json.schemastore.org/geojson.json#/definitions/geometry'
         type:
           type: string
           description: The GeoJSON type
