--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,5 +23,5 @@ jobs:
             npm run validate_catalog -- -d ../static-catalog/examples/catalog.json
             npm run validate_dataset -- -d ../dataset-spec/examples/sentinel2.json
             npm run validate_extension -- -s ../extensions/scientific/schema.json -d ../extensions/scientific/example-merraclim.json
-            npm run validate_item -- -d ../json-spec/sample.json
+            npm run validate_item -- -d ../json-spec/examples/sample.json
             # ToDo: More files should be validated
