--- a/api-spec/extensions/query.fragment.yaml
+++ b/api-spec/extensions/query.fragment.yaml
@@ -43,29 +43,29 @@ components:
           description: Match using an operator
           properties:
             eq:
-              description: Find items with a property that is equal to the specified value
+              description: Find items with a property that is equal to the specified value. For strings, a case-insensitive comparison must be performed.
             neq:
-              description: Find items that *don't* contain the specified value
+              description: Find items that *don't* contain the specified value. For strings, a case-insensitive comparison must be performed.
             gt: 
               type: number
-              description: Find items with a property value greater than the specified value
+              description: Find items with a property value greater than the specified value.
             lt:
               type: number
-              description: Find items with a property value less than the specified value
+              description: Find items with a property value less than the specified value.
             gte:
               type: number
-              description: Find items with a property value greater than or equal the specified value
+              description: Find items with a property value greater than or equal the specified value.
             lte:
               type: number
-              description: Find items with a property value greater than or equal the specified value
+              description: Find items with a property value greater than or equal the specified value.
             startsWith:
               type: string
-              description: Find items with a property that begins with the specified string
+              description: Find items with a property that begins with the specified string. A case-insensitive comparison must be performed.
             endsWith:
               type: string
-              description: Find items with a property that ends with the specified string
+              description: Find items with a property that ends with the specified string. A case-insensitive comparison must be performed.
             contains:
               type: string
-              description: Find items with a property that contains with the specified string
+              description: Find items with a property that contains with the specified string. A case-insensitive comparison must be performed.
             time:
               $ref: '#/components/schemas/time'
