--- a/api-spec/definitions/WFS3core.fragment.yaml
+++ b/api-spec/definitions/WFS3core.fragment.yaml
@@ -145,7 +145,7 @@ paths:
           content:
             application/geo+json:
               schema:
-                $ref: '#/components/schemas/featureGeoJSON'
+                $ref: 'http://geojson.org/schema/Feature.json'
             text/html:
               schema:
                 type: string
