--- a/api-spec/STAC-query.yaml
+++ b/api-spec/STAC-query.yaml
@@ -239,6 +239,27 @@ components:
           type: string
         description:
           type: string
+    links:
+      type: array
+      items:
+        $ref: '#/components/schemas/link'
+    link:
+      type: object
+      required:
+        - href
+        - rel
+      additionalProperties: true
+      properties:
+        href:
+          type: string
+          format: url
+          example: 'http://www.geoserver.example/stac/naip/child/catalog.json'
+        rel:
+          type: string
+          example: child
+        type:
+          type: string
+          example: application/json
     searchBody:
       description: The search criteria
       type: object
@@ -464,25 +485,6 @@ components:
           $ref: '#/components/schemas/time'
       additionalProperties:
         type: object
-    links:
-      type: array
-      items:
-        type: object
-        required:
-          - href
-          - rel
-        additionalProperties: true
-        properties:
-          href:
-            type: string
-            format: url
-            example: 'http://www.geoserver.example/stac/naip/child/catalog.json'
-          rel:
-            type: string
-            example: child
-          type:
-            type: string
-            example: application/json
     itemCollectionLinks:
       type: object
       properties:
