Fixed titles of the API docs and type fix for properties.

--- a/api-spec/STAC-standalone.yaml
+++ b/api-spec/STAC-standalone.yaml
@@ -470,7 +470,8 @@ components:
       properties:
         datetime:
           $ref: '#/components/schemas/time'
-      additionalProperties: true
+      additionalProperties:
+        description: Any additional properties added in via extensions.
     itemCollectionLinks:
       type: object
       properties:
