--- a/api-spec/STAC-query.yaml
+++ b/api-spec/STAC-query.yaml
@@ -501,7 +501,8 @@ components:
       properties:
         datetime:
           $ref: '#/components/schemas/time'
-      additionalProperties: true
+      additionalProperties:
+        description: Any additional properties added in via extensions.
     itemCollectionLinks:
       type: object
       properties:
