--- a/api-spec/WFS3core+STAC.yaml
+++ b/api-spec/WFS3core+STAC.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.1
 info:
-  title: The SpatioTemporal Asset Catalog API (standalone)
+  title: The SpatioTemporal Asset Catalog API + WFS3
   version: 0.6.0
   description: >-
     This is an OpenAPI definition of the core SpatioTemporal Asset Catalog API
@@ -629,7 +629,8 @@ components:
       properties:
         datetime:
           $ref: '#/components/schemas/time'
-      additionalProperties: true
+      additionalProperties:
+        description: Any additional properties added in via extensions.
     itemCollectionLinks:
       type: object
       properties:
