--- a/extensions/transaction/WFS3core+STAC+extensions.yaml
+++ b/extensions/transaction/WFS3core+STAC+extensions.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.1
 info:
-  title: The SpatioTemporal Asset Catalog API (standalone)
+  title: The SpatioTemporal Asset Catalog API + WFS3 + Transaction extension
   version: 0.6.0
   description: >-
     This is an OpenAPI definition of the core SpatioTemporal Asset Catalog API
