--- a/extensions/transaction/transaction-fragment.yaml
+++ b/extensions/transaction/transaction-fragment.yaml
@@ -1,3 +1,6 @@
+openapi: 3.0.1
+info:
+  title: The SpatioTemporal Asset Catalog API + WFS3 + Transaction extension
 paths:
   '/collections/{collectionId}/items':
     post:
