--- a/api-spec/STAC-standalone.yaml
+++ b/api-spec/STAC-standalone.yaml
@@ -23,7 +23,13 @@ servers:
 paths:
   /stac:
     get:
-      summary: Return a catalog definition json
+      summary: Return the root catalog or collection.
+      description: >-
+        Returns the root STAC Catalog or STAC Collection that is the entry point
+        for users to browse with STAC Browser or for search engines to crawl.
+        This can either return a single STAC Collection or more commonly a STAC
+        catalog that usually lists sub-catalogs of STAC Collections, i.e. a
+        simple catalog that lists all collections available through the API.
       tags:
         - STAC
       responses:
@@ -35,8 +41,9 @@ paths:
                 $ref: '#/components/schemas/catalogDefinition'
   /stac/search:
     get:
-      summary: >-
-        retrieve items matching filters. Intended as a shorthand API for simple
+      summary: Search STAC items by simple filtering.
+      description: >-
+        Retrieve Items matching filters. Intended as a shorthand API for simple
         queries. This method is optional.
       operationId: getSearchSTAC
       tags:
@@ -65,7 +72,8 @@ paths:
               schema:
                 type: string
     post:
-      summary: >-
+      summary: Search STAC items by full-featured filtering.
+      description: >-
         retrieve items matching filters. Intended as the standard, full-featured
         query API. This method is mandatory.
       operationId: postSearchSTAC
