Fixed issues mostly introduced by other PRs, some restructuring and other fixes.

--- a/extensions/transaction/WFS3core+STAC+extensions.yaml
+++ b/extensions/transaction/WFS3core+STAC+extensions.yaml
@@ -917,11 +917,11 @@ components:
               - properties
               - constructions
         version:
-          title: Dataset Version
+          title: Collection Version
           type: string
           example: 1
         license:
-          title: Dataset License Name
+          title: Collection License Name
           type: string
           example: Apache-2.0
         provider:
